--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="https://binayarimal.github.io/stylin-with-css/" target="_blank">Stylin With Css</a>
-            <a href="#" target="">Name of project goes here</a>
+            <a href="https://binayarimal.github.io/position/" target="_blank">Positioning</a>
             <a href="https://github.com/binayarimal" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/binaya-rimal/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
