timeofday to portal

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
      <h1 class = "page-header">Binaya Rimal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="https://binayarimal.github.io/stylin-with-css/" target="_blank">Stylin With Css</a>
+           <a href="https://binayarimal.github.io/stylin-with-css/" target="_blank">Stylin With Css</a>
             <a href="https://binayarimal.github.io/position/" target="_blank">Positioning</a>
+            <a href="https://binayarimal.github.io/time-of-day/" target="_blank">Time Of Day</a>
             <a href="https://github.com/binayarimal" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/binaya-rimal/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -29,25 +30,25 @@
         </picture>   
        <h2 class="subheader">About Me</h2>
        <p>
-         I am an aspiring software developer on track to start internship on March 2023. 
-         My technical knowledge consists of HTML, CSS, Javascript, Python, Java, C++, and more. Besides
-         coding skills, I have also gained valuable soft skills from working as a server at resturaunt
-          for several years. </p>
-        <p>
-         I had finished an 8 months coding bootcamp by the organization Thinkful. It was an intensive fastpaced program that 
-         dealt fullstack web development. While I learned a tremendous amount of knowledge, I really wanted
-         to solidify my foundations before I started any job. This led me to Year Up, a skill development program 
-         that aims to train young individuals to be professionals in the tech world. 
+        I am an aspiring software developer on track to start my internship on March 2023. I have coding skills in HTML, 
+        CSS, Javascript, Python, Java, C++, and React.js. Besides coding skills, I have also gained valuable soft skills
+        from working as a server at a restaurant for several years.
+      </p>
+       <p>
+          I had finished an eight months coding Bootcamp by the organization Thinkful. It was a fast-paced program focused 
+          on full-stack web development. While I learned a tremendous amount of knowledge, I wanted to solidify my foundations
+          before I started any job. This led me to Year Up, a skill development program that aims to train young individuals to
+          be professionals in the tech world. 
+       </p>
+       <p> 
+          I hope to work as a software developer in a company that aims to make a positive change. Once I am financially stable, 
+          I would love to teach the valuable lesson I've learned professionally and personally to the up-and-coming youths of the world. 
         </p>
-        <p> 
-         In the near future, I hope to work as a software developer in a company that aims to make a postive 
-         change. Once I am in a financialy stable position, I would love to teach the valuable lesson I've learned
-         both professionally and personally to the up and coming youths of the world. 
+       <p>
+          Something to know about me is that when I get passionate about something, I dive deep into that passion. Whether it be photography,
+           music, movies, or programming, I take the time and effort to appreciate my endeavors in-depth. I hope to continue my ever-expanding 
+           array of hobbies and interests. 
         </p>
-        <p>
-         Something to know about me is that when I get passionate about something, I dive deep into that passion.
-         Whether it be photography, music, movies, or programming; I like to appreciate my endeavors by understanding
-         and savoring them as much as I can. I hope to continue my ever expanding array of hobbies and interests. </p>
        
     
      <footer>
