added daily grind

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
            <a href="https://binayarimal.github.io/stylin-with-css/" target="_blank">Stylin With Css</a>
             <a href="https://binayarimal.github.io/position/" target="_blank">Positioning</a>
             <a href="https://binayarimal.github.io/time-of-day/" target="_blank">Time Of Day</a>
+            <a href="https://binayarimal.github.io/daily-grind/" target="_blank">Daily-Grind</a>            
             <a href="https://github.com/binayarimal" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/binaya-rimal/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
