added data processing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <a href="https://binayarimal.github.io/daily-grind/" target="_blank">Daily-Grind</a>  
             <a href="https://binayarimal.github.io/dom-play/#" target="_blank">DOM-Play</a>
             <a href="https://binayarimal.github.io/form-template/" target="_blank">Form Template</a>
-            <a href="https://binayarimal.github.io/guess-the-number/" target="_blank">Guess The Number</a>                         
+            <a href="https://binayarimal.github.io/guess-the-number/" target="_blank">Guess The Number</a> 
+            <a href="https://binayarimal.github.io/data-processing/" target="_blank">Data Processing</a>                        
             <a href="https://github.com/binayarimal" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/binaya-rimal/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
