--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <a href="https://binayarimal.github.io/data-processing/" target="_blank">Data Processing</a>
             <a href="https://binayarimal.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>    
             <a href="https://ajax-random-quotes.binayarimal.repl.co/ajax_headline1.htm" target="_blank">Ajax Quotes</a> 
-            <a href="https://pet-adoption-agency.binayarimal.repl.co/" target="_blank">Pet Adoption Agency</a>                                                               
+            <a href="https://pet-adoption-agency.binayarimal.repl.co/" target="_blank">Pet Adoption Agency</a>   
+            <a href="https://templating-with-ejs.binayarimal.repl.co/" target="_blank">Node.js/EJS</a>                                                            
             <a href="https://github.com/binayarimal" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/binaya-rimal/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
